<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:prvandroid="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:widget="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reg_bg"
    android:fitsSystemWindows="true"
    tools:context="logdemo.wjj.com.Tiffany.Activity.RegisterActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <logdemo.wjj.com.Tiffany.Custom.IconEditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg"
            android:textColorHint="#ffffff"
            widget:hint="@string/user_name"
            widget:iconSrc="@mipmap/users"
            widget:isPassword="false"></logdemo.wjj.com.Tiffany.Custom.IconEditText>

        <logdemo.wjj.com.Tiffany.Custom.IconEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user"
            android:layout_marginTop="30dp"
            android:background="@drawable/layout_bg"
            android:textColorHint="#ffffff"
            widget:hint="@string/password"
            widget:iconSrc="@mipmap/lock"
            widget:isPassword="true"></logdemo.wjj.com.Tiffany.Custom.IconEditText>

        <RelativeLayout
            android:id="@+id/layoutP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/layout_bg">

            <logdemo.wjj.com.Tiffany.Custom.IconEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#ffffff"
                widget:hint="@string/Phone"
                widget:iconSrc="@mipmap/phone"
                widget:isPassword="false"></logdemo.wjj.com.Tiffany.Custom.IconEditText>

            <Button
                android:id="@+id/send_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/layout_bg"
                android:text="@string/send_Msg"
                android:textColor="@color/white" />

        </RelativeLayout>

        <logdemo.wjj.com.Tiffany.Custom.IconEditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutP"
            android:layout_marginTop="30dp"
            android:background="@drawable/layout_bg"
            android:textColorHint="#ffffff"
            widget:hint="@string/chat"
            widget:iconSrc="@mipmap/chat"
            widget:isPassword="true"></logdemo.wjj.com.Tiffany.Custom.IconEditText>
    </RelativeLayout>


    <Button
        android:id="@+id/registerbutton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/layout_bg"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="30dp" />


    <RelativeLayout
        android:id="@+id/go_to_login"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@+id/registerbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/go_to_login"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />
    </RelativeLayout>


</RelativeLayout>
